syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_get_user.proto";
import "rpc_recognize_icd.proto";

option go_package = "github.com/blueai2022/appsubmission/pb";

service LifeAI {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
    }
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
    }   
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/v1/get_user/{username}"
        };
    }   
    rpc RecognizeICD10 (RecognizeICD10Request) returns (RecognizeICD10Response) {
        option (google.api.http) = {
            post: "/v1/recognize_icd10"
            body: "*"
        };
    }
}
